7.945:cash.system.searchContacts by transaction 'category_id'
